--- a/TestAppProjekt/TestAppProjekt/Meny 2/Employees.xaml
+++ b/TestAppProjekt/TestAppProjekt/Meny 2/Employees.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TestAppProjekt.HomeScreen.EmplyeesPage">
+             x:Class="TestAppProjekt.Meny_2.Employees">
   <ContentPage.Content>
     <ScrollView>
       <StackLayout>
